# openswitch-ops-ovs

./: .gitreview  CMakeLists.txt  Makefile.am  README.md  boot.sh  configure.ac  groups  ops-boot.sh  reviewers.config
lib/: ops-netdev.c
patches/: ovs_01.patch
